--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "galactic-age-calculator",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kimmykokonut/galactic-age-calculator.git"
+  },
   "description": "Calculate Earth Age into other planet's solar years",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=development",
     "start": "npm run build && webpack-dev-server -open --mode=development",
     "lint": "eslint src --ext .js",
-    "test": "jest --coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kimmykokonut/galactic-age-calculator.git"
+    "test": "jest --coverage",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
     "eslint-webpack-plugin": "^4.0.1",
+    "gh-pages": "^6.1.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.5.0",
